package com.directi.training.isp.exercice_refactored;

public interface IProximityDoor extends Door{
    void proximityCallback();
}

